# anarchie

./: .gitignore  Cargo.toml  README.md  REUSE.toml  mkdocs.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs-to-ghpages.yml  docs.yml  publish-crates.yml
crates/anarchie-aom/: Cargo.toml
crates/anarchie-aom/src/: lib.rs
crates/anarchie-cli/: Cargo.toml
crates/anarchie-cli/src/: main.rs
crates/anarchie-opt/: Cargo.toml
crates/anarchie-opt/src/: lib.rs
crates/anarchie-query/: Cargo.toml
crates/anarchie-query/src/: error.rs  execute.rs  index.rs  stored.rs
crates/anarchie-query/src/aql/: lexer.rs
crates/anarchie-query/tests/: pipeline.rs
crates/anarchie-rm/: Cargo.toml
crates/anarchie-rm/src/: common.rs  composition.rs  data_structures.rs  data_values.rs  ehr.rs  history.rs  lib.rs  support.rs  text.rs  ty.rs
crates/anarchie-rm/tests/: round_trip.rs
crates/anarchie-rm/tests/fixtures/: blood-pressure-composition.json
crates/anarchie-serve/: Cargo.toml
crates/anarchie-serve/src/: lib.rs  mcp.rs  ops.rs  rest.rs
crates/anarchie-store/: Cargo.toml
crates/anarchie-store/src/: deployment.rs  error.rs  fsck.rs  git.rs  lib.rs  pack.rs  starter.rs  template.rs
crates/anarchie-store/src/starter/templates/: adverse-reaction-list.opt.json  attribution.md  encounter-note.opt.json  procedure-list.opt.json  vital-signs-encounter.opt.json
crates/anarchie-store/tests/: store.rs
crates/anarchie-store/tests/fixtures/ips/: immunisation.json  laboratory.json  medication.json  procedure.json
crates/anarchie-validate/: Cargo.toml
crates/anarchie-validate/src/: lib.rs  opt.rs  rm.rs
crates/anarchie-validate/tests/: validate.rs
crates/anarchie-validate/tests/fixtures/: vital-signs-encounter.opt.json
docs/: index.md  install.md  install.sh
docs/commands/: aql.md  canonicalise.md  cat.md  commit.md  diff.md  ehr.md  fsck.md  index.md  info.md  init.md  log.md  mcp.md  pack.md  query.md  serve.md  template.md  validate.md
docs/reference/: on-disk-format.md  roadmap.md  versioning-and-git.md
docs/walkthrough/: getting-started.md  index.md  inspecting-the-files.md  querying-with-aql.md  reference-model.md  the-mcp-server.md  the-rest-api.md  the-store.md  validation-and-templates.md
docs/why/: why-anarchie.md  why-git.md
s/: README.md  build  docs  install  install-hooks  lint  test
specs/: architecture.md  bundled-archetypes.md  ips-readiness.md  licensing.md  on-disk-format.md  openehr-terminology-codes.md  query-engine.md  reference-model-coverage.md  regulatory-context.md  rest-api.md  roadmap.md  scaling.md  serialisation-formats.md  validation.md  versioning-and-git.md
src/: aom.rs  lib.rs  main.rs  opt.rs
src/cli/: inspect.rs  mod.rs  query.rs  record.rs  schema.rs  serve.rs
src/query/: error.rs  execute.rs  index.rs  mod.rs  stored.rs
src/query/aql/: ast.rs  lexer.rs  mod.rs  parser.rs
src/rm/: common.rs  composition.rs  data_structures.rs  data_values.rs  ehr.rs  history.rs  mod.rs  support.rs  text.rs  ty.rs
src/serve/: mcp.rs  mod.rs  ops.rs  rest.rs
src/store/: config.rs  deployment.rs  error.rs  fsck.rs  git.rs  mod.rs  pack.rs  starter.rs  template.rs
src/store/starter/templates/: attribution.md  immunisation-list.opt.json  laboratory-result-report.opt.json  medication-list.opt.json  problem-list.opt.json
src/validate/: mod.rs  opt.rs  report.rs  rm.rs
tests/: cli.rs  pipeline.rs  round_trip.rs  store.rs  validate.rs
tests/fixtures/ips/: encounter.json
