# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-aom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Archetype Object Model constraint types for anarchie validation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
