# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-cli"
description = "Command-line interface for the anarchie flat-file openEHR CDR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "anarchie"
path = "src/main.rs"

[dependencies]
anarchie-rm = { workspace = true }
anarchie-store = { workspace = true }
anarchie-validate = { workspace = true }
anarchie-query = { workspace = true }
anarchie-serve = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
