# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-opt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Operational Template loading into anarchie's AOM constraint model"

[dependencies]
anarchie-aom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
