# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Path-extraction index and AQL query engine for anarchie"

[dependencies]
anarchie-rm.workspace = true
anarchie-store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"
