# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-rm"
description = "openEHR Reference Model types with canonical JSON (de)serialisation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
