# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-backed flat-file store for anarchie openEHR Compositions"

[dependencies]
anarchie-rm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
toml.workspace = true
jiff.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
