# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "anarchie-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reference Model and Operational Template validation for anarchie"

[dependencies]
anarchie-rm = { workspace = true }
anarchie-aom = { workspace = true }
anarchie-opt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
